fix: Map styling. Accessibility buttons are now not visible

--- a/packages/leaflet-map/src/css/base-map.css
+++ b/packages/leaflet-map/src/css/base-map.css
@@ -1,7 +1,7 @@
 :root {
   --basemap-map-width: 100%;
   --basemap-map-height: 100%;
-  --basemap-map-aspect-ratio: 16/9;
+  --basemap-map-aspect-ratio: unset;
 }
 
 .map-container.osc-map {
@@ -16,7 +16,6 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-
 }
 
 .osc-base-map-widget-container .osc-map-marker-faded {
@@ -41,4 +40,15 @@
   display: flex;
   flex-direction: column;
   gap: .5rem;
+}
+
+.skip-link {
+  position: absolute;
+  z-index: -1;
+  top: 10px;
+  left: 10px;
+}
+
+.osc .resource-card--link .osc-resource-overview-content-item-footer .icon > p {
+  margin: 0;
 }
